# maple_combat_calculator

./: .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
.github/workflows/: ci.yml
mcc/: CMakeLists.txt  README.md
mcc/inc/: combat_power.h  skill_damage.h
mcc/src/: combat_power.cpp  combat_power.h  skill_damage.cpp  skill_damage.h
mcc/test/: mcc_test.cpp
mcm/: CMakeLists.txt
mcm/inc/: aggregator.h  connector.h  context.h  loader.h  mcm.h
mcm/src/: aggregator.cpp  connector.cpp  context.cpp  loader.cpp  main.cpp  mcm.cpp  wasm_exports.cpp
mdc/: CMakeLists.txt
mdc/inc/: component.h  engine.h  entity.h  loader.h  logger.h  policy.h  skill_component.h
mdc/src/: engine.cpp  entity.cpp  loader.cpp  logger.cpp  main.cpp  policy.cpp  skill_component.cpp
nexon_api/: CMakeLists.txt
nexon_api/inc/: nexon_api_loader.h
nexon_api/src/: nexon_api_loader.cpp
nexon_api/test/: nexon_api_loader_test.cpp
shared/data/: README.md
shared/data/classes/: adele_skills.yaml
shared/data/mobs/: default_boss_spec.yaml  dummy_boss.yaml
shared/data/policies/: adele_rotation.yaml
shared/data/presets/: adele_sample.yaml
shared/proto/: battle_practice_character_info.proto  battle_practice_result.proto  error_message.proto  replay_id.proto
shared/proto/internal/: combat_log.proto  mcc_stat.proto
shared/proto/nexon/: skill_timeline.proto
src/: skill_damage.h
